--- a/web/src/app/subdivision-data-display/subdivision-data-display.component.html
+++ b/web/src/app/subdivision-data-display/subdivision-data-display.component.html
@@ -1,1 +1,33 @@
-<p>Display the subdivision data here!</p>
+
+<div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)">
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Id </th>
+        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+      </ng-container>
+      <ng-container matColumnDef="code">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Code </th>
+        <td mat-cell *matCellDef="let element"> {{element.code}} </td>
+      </ng-container>
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+      </ng-container>
+      <ng-container matColumnDef="subdivisionStatusCode">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Subdivision Status Code  </th>
+        <td mat-cell *matCellDef="let element"> {{element.subdivisionStatusCode }} </td>
+      </ng-container>
+      <ng-container matColumnDef="nearMapImageDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> NearMap Image Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.nearMapImageDate| date: 'dd/MM/yyyy hh:mm:ss'}}</td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+    <mat-paginator [pageSizeOptions]="[5, 10, 20]"
+                   showFirstLastButtons
+                   aria-label="Select page of periodic elements">
+    </mat-paginator>
+  </div>
